# wic-mt-demo-project-mock-api

./: .gitignore  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: api-checks.yml  api-ci.yml  deploy-mock-api.yml
app/: Dockerfile  Makefile  local.env  openapi.yml  pyproject.toml  setup.cfg
app/api/: __main__.py  api.py  app.py  app_config.py  eligibility.py
app/api/auth/: api_key_auth.py
app/api/db/: __init__.py  db_config.py
app/api/db/migrations/: alembic.ini  env.py  run.py
app/api/db/migrations/versions/: 2022_08_29_14_29_10_b78c1c9029f5_does_it_work.py  2022_08_29_14_29_10_b78c1c9029f5_first_migration.py  2022_09_02_12_43_41_7b9a08694907_wmdp_126_add_screener_model.py  2022_09_06_13_56_30_5b996cf0144e_wmdp_193_add_submitted_timestamp.py  2022_09_07_15_34_02_5fff206b7322_wmdp_196_add_wic_clinic.py  2022_09_16_12_16_40_0004c84fe35a_test_migration2.py  2022_09_16_16_16_20_eba97ae6ec0e_test_migration.py  2022_10_27_05_59_35_8ed905638aa5_add_wic_agency.py
app/api/db/models/: __init__.py  base.py  eligibility_models.py  factories.py
app/api/handler/: eligibility_handler.py
app/api/logging/: __init__.py  log_attributes.py  log_formatters.py
app/api/route/: eligibility.py  example_person_route.py  healthcheck.py
app/api/route/handler/: eligibility_handler.py  example_person_handler.py
app/api/scripts/: create_eligibility_screener_csv.py  generate_pet_csv.py
app/api/scripts/util/: script_util.py
app/api/util/: api_context.py  connexion_validators.py  datetime_util.py  error_handlers.py  file_util.py  local.py  pydantic_util.py  response.py
app/tests/: conftest.py
app/tests/api/: test_eligibility.py
app/tests/api/auth/: test_api_key_auth.py
app/tests/api/db/: test_db.py  test_migrations.py
app/tests/api/db/models/: test_factories.py
app/tests/api/logging/: test_logging.py
app/tests/api/route/: test_eligibility.py  test_example_person_route.py
app/tests/api/scripts/: test_create_eligibility_screener_csv.py
app/tests/api/util/: test_api_context.py  test_openapi.yml  test_validators.py
docs/: README.md
docs/app/: api-details.md  database-migrations.md  logging.md  technical-overview.md  writing-tests.md
infra/: README.md
infra/mock_api/: cloudwatch.tf  ecr.tf  iam.tf
infra/mock_api/constants/: outputs.tf
infra/mock_api/environments/prod/: main.tf
infra/mock_api/environments/stage/: main.tf
infra/mock_api/environments/test/: main.tf
infra/mock_api/template/: .terraform.lock.hcl  ecs.tf  main.tf  rds.tf  s3.tf  variables.tf
